2008-08-05 Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: fixed bug #146, merging of JCL options omitted some
	  options.
	* options.c: Fixed bug #151, crash when default value of an option was
	  set from a composite option.

2008-07-30 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Added support for the *FoomaticRIPCommandLinePDF keyword. It will
	  be used for PDF input. If it is missing, *FoomaticRIPCommandLine
	  will be used _only_ if it calls GhostScript, otherwise the Job is
	  converted to PostScript.
	* pdf.c: Pagerange-specific options work correctly now. If the command
	  line calls GhostScript, the -d(First|Last)Page parameters are used.
	  Otherwise, the PDF is split with GhostScript and fed to the command
	  line afterwards.

2008-06-22 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Allow float values on *OrderDependency settings. This is
	valid according to the PPD spec, and is used by some HP PPDs.

2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Allow choices starting with "From". Even if they do not
	  point to a valid composite option.
	* renderer.c: Parse more complex command lines correctly when looking
	  for the "gs" executable

2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c, postscript.c: fixed bug #138 (foomatic-rip does not
	  always insert the code pieces of the members of composite options)

2007-06-13  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: When replacing elements of the Ghostscript command line,
	  do not remove the spaces between the items. This made printing with
	  the new foomatic-rip not working in general for most cases.

2008-05-11 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf backend: removed poppler dependency, process pdfs with libgs
	now. Changed the buildsystem to reflect this.

2008-04-23 Lars Uebernickel <larsuebernickel@gmx.de>

	* foomatic-rip.c, configure.ac: Compose the current version out of the